--- a/multi-vm-base/Vagrantfile
+++ b/multi-vm-base/Vagrantfile
@@ -13,8 +13,8 @@ WORKER_NODES_COUNT  = 5
 
 
 Vagrant.configure(2) do |config|
-
-  
+  # Boot strap sequence for all VM's 
+  config.vm.provision "shell", path: "bootstrap.sh"
 
   # Kubernetes Master Server
   config.vm.define "kmaster" do |node|
@@ -24,7 +24,7 @@ Vagrant.configure(2) do |config|
     node.vm.box_version       = VAGRANT_BOX_VERSION
     node.vm.hostname          = "kmaster.example.com"
 
-   
+    node.vm.network "private_network", ip: "172.16.16.100"
   
     node.vm.provider :virtualbox do |v|
       v.name    = "kmaster"
@@ -37,8 +37,8 @@ Vagrant.configure(2) do |config|
       v.nested  = true
       v.cpus    = CPUS_MASTER_NODE
     end
-  
-    
+    # Boot strap sequence for kmaster 
+    # node.vm.provision "shell", path: "bootstrap_kmaster.sh"
   
   end
 
@@ -53,7 +53,7 @@ Vagrant.configure(2) do |config|
       node.vm.box_version       = VAGRANT_BOX_VERSION
       node.vm.hostname          = "kworker#{i}.example.com"
 
-      
+      node.vm.network "private_network", ip: "172.16.16.10#{i}"
 
       node.vm.provider :virtualbox do |v|
         v.name    = "kworker#{i}"
@@ -66,8 +66,8 @@ Vagrant.configure(2) do |config|
         v.nested  = true
         v.cpus    = CPUS_WORKER_NODE
       end
-
-      
+      # Boot strap sequence for worker 
+      # node.vm.provision "shell", path: "bootstrap_kworker.sh"
 
     end
 
