--- a/multi-vm-base/Vagrantfile
+++ b/multi-vm-base/Vagrantfile
@@ -9,7 +9,7 @@ CPUS_MASTER_NODE    = 2
 CPUS_WORKER_NODE    = 1
 MEMORY_MASTER_NODE  = 2048
 MEMORY_WORKER_NODE  = 1024
-WORKER_NODES_COUNT  = 5
+WORKER_NODES_COUNT  = 2
 
 
 Vagrant.configure(2) do |config|
@@ -17,17 +17,17 @@ Vagrant.configure(2) do |config|
   config.vm.provision "shell", path: "bootstrap.sh"
 
   # Kubernetes Master Server
-  config.vm.define "kmaster" do |node|
+  config.vm.define "master" do |node|
   
     node.vm.box               = VAGRANT_BOX
     node.vm.box_check_update  = false
     node.vm.box_version       = VAGRANT_BOX_VERSION
-    node.vm.hostname          = "kmaster.example.com"
+    node.vm.hostname          = "master.example.com"
 
     node.vm.network "private_network", ip: "172.16.16.100"
   
     node.vm.provider :virtualbox do |v|
-      v.name    = "kmaster"
+      v.name    = "master"
       v.memory  = MEMORY_MASTER_NODE
       v.cpus    = CPUS_MASTER_NODE
     end
@@ -37,8 +37,8 @@ Vagrant.configure(2) do |config|
       v.nested  = true
       v.cpus    = CPUS_MASTER_NODE
     end
-    # Boot strap sequence for kmaster 
-    # node.vm.provision "shell", path: "bootstrap_kmaster.sh"
+    # Boot strap sequence for master 
+    # node.vm.provision "shell", path: "bootstrap_master.sh"
   
   end
 
@@ -46,17 +46,17 @@ Vagrant.configure(2) do |config|
   # Kubernetes Worker Nodes
   (1..WORKER_NODES_COUNT).each do |i|
 
-    config.vm.define "kworker#{i}" do |node|
+    config.vm.define "worker#{i}" do |node|
 
       node.vm.box               = VAGRANT_BOX
       node.vm.box_check_update  = false
       node.vm.box_version       = VAGRANT_BOX_VERSION
-      node.vm.hostname          = "kworker#{i}.example.com"
+      node.vm.hostname          = "worker#{i}.example.com"
 
       node.vm.network "private_network", ip: "172.16.16.10#{i}"
 
       node.vm.provider :virtualbox do |v|
-        v.name    = "kworker#{i}"
+        v.name    = "worker#{i}"
         v.memory  = MEMORY_WORKER_NODE
         v.cpus    = CPUS_WORKER_NODE
       end
@@ -67,7 +67,7 @@ Vagrant.configure(2) do |config|
         v.cpus    = CPUS_WORKER_NODE
       end
       # Boot strap sequence for worker 
-      # node.vm.provision "shell", path: "bootstrap_kworker.sh"
+      # node.vm.provision "shell", path: "bootstrap_worker.sh"
 
     end
 
