Added kali vagrant password
vagrant:vagrant

--- a/02-multi-vm-base-security/Vagrantfile
+++ b/02-multi-vm-base-security/Vagrantfile
@@ -3,13 +3,31 @@
 
 ENV['VAGRANT_NO_PARALLEL'] = 'yes'
 
-VAGRANT_BOX         = "generic/ubuntu2204"
-VAGRANT_BOX_VERSION = "4.0.2"
+#VAGRANT_BOX         = "generic/ubuntu2204"
+#VAGRANT_BOX_VERSION = "4.0.2"
+#CPUS_MASTER_NODE    = 2
+#CPUS_WORKER_NODE    = 1
+#MEMORY_MASTER_NODE  = 2048
+#MEMORY_WORKER_NODE  = 1024
+#WORKER_NODES_COUNT  = 2
+
+VAGRANT_BOX         = "kalilinux/rolling"
+VAGRANT_BOX_VERSION = "2024.3.1"
 CPUS_MASTER_NODE    = 2
 CPUS_WORKER_NODE    = 1
 MEMORY_MASTER_NODE  = 2048
 MEMORY_WORKER_NODE  = 1024
 WORKER_NODES_COUNT  = 2
+
+### - Windows target
+
+VAGRANT_BOX_TARGET         = "kalilinux/rolling"
+VAGRANT_BOX_VERSION_TARGET = "2024.3.1"
+CPUS_MASTER_NODE_TARGET    = 2
+CPUS_WORKER_NODE_TARGET    = 1
+MEMORY_MASTER_NODE_TARGET  = 2048
+MEMORY_WORKER_NODE_TARGET  = 1024
+WORKER_NODES_COUNT_TARGET  = 2
 
 
 Vagrant.configure(2) do |config|
@@ -17,17 +35,17 @@ Vagrant.configure(2) do |config|
   config.vm.provision "shell", path: "bootstrap.sh"
 
   # Kubernetes Master Server
-  config.vm.define "master" do |node|
+  config.vm.define "kali" do |node|
   
     node.vm.box               = VAGRANT_BOX
     node.vm.box_check_update  = false
     node.vm.box_version       = VAGRANT_BOX_VERSION
-    node.vm.hostname          = "master.example.com"
+    node.vm.hostname          = "kali.example.com"
 
     node.vm.network "private_network", ip: "172.16.16.100"
   
     node.vm.provider :virtualbox do |v|
-      v.name    = "master"
+      v.name    = "kali"
       v.memory  = MEMORY_MASTER_NODE
       v.cpus    = CPUS_MASTER_NODE
     end
@@ -37,34 +55,34 @@ Vagrant.configure(2) do |config|
       v.nested  = true
       v.cpus    = CPUS_MASTER_NODE
     end
-    # Boot strap sequence for master 
+    # Boot strap sequence for kali 
     # node.vm.provision "shell", path: "bootstrap_master.sh"
   
   end
 
 
-  # Kubernetes Worker Nodes
+  # Target Nodes
   (1..WORKER_NODES_COUNT).each do |i|
 
-    config.vm.define "worker#{i}" do |node|
+    config.vm.define "windows#{i}" do |node|
 
-      node.vm.box               = VAGRANT_BOX
+      node.vm.box               = VAGRANT_BOX_TARGET
       node.vm.box_check_update  = false
-      node.vm.box_version       = VAGRANT_BOX_VERSION
-      node.vm.hostname          = "worker#{i}.example.com"
+      node.vm.box_version       = VAGRANT_BOX_VERSION_TARGET
+      node.vm.hostname          = "windows#{i}.example.com"
 
       node.vm.network "private_network", ip: "172.16.16.10#{i}"
 
       node.vm.provider :virtualbox do |v|
-        v.name    = "worker#{i}"
-        v.memory  = MEMORY_WORKER_NODE
-        v.cpus    = CPUS_WORKER_NODE
+        v.name    = "windows#{i}"
+        v.memory  = MEMORY_WORKER_NODE_TARGET
+        v.cpus    = CPUS_WORKER_NODE_TARGET
       end
 
       node.vm.provider :libvirt do |v|
-        v.memory  = MEMORY_WORKER_NODE
+        v.memory  = MEMORY_WORKER_NODE_TARGET
         v.nested  = true
-        v.cpus    = CPUS_WORKER_NODE
+        v.cpus    = CPUS_WORKER_NODE_TARGET
       end
       # Boot strap sequence for worker 
       # node.vm.provision "shell", path: "bootstrap_worker.sh"
